[gd_scene load_steps=12 format=3 uid="uid://dxhb6c2kqw5c7"]

[ext_resource type="Script" path="res://start_screen.gd" id="1_co0ne"]
[ext_resource type="FontFile" uid="uid://ch103gi2tob72" path="res://Assets/font/andina.ttf" id="2_3uypn"]
[ext_resource type="Texture2D" uid="uid://dy2h5dklc8h7p" path="res://Assets/Invaders/Invader1-1.png" id="2_pcynf"]
[ext_resource type="Texture2D" uid="uid://m4ub6oll4ikv" path="res://Assets/Invaders/Invader3-1.png" id="2_su4we"]
[ext_resource type="Texture2D" uid="uid://bn227mp3yqjlo" path="res://Assets/Invaders/Invader2-1.png" id="4_iod57"]
[ext_resource type="Script" path="res://Audio controls.gd" id="6_idy13"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vcw74"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7adil"]
bg_color = Color(5.77569e-06, 0.722633, 0.278973, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jutwi"]
bg_color = Color(0.685782, 0.181974, 0.205867, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h0d4f"]
bg_color = Color(0.154706, 0.624147, 0.97498, 1)

[sub_resource type="Theme" id="Theme_b8rur"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_co0ne")

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -307.0
offset_top = -2.0
offset_right = 306.0
offset_bottom = 217.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_3uypn")
theme_override_font_sizes/font_size = 90
text = "SPACE
 INVADERS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -241.0
offset_top = -144.0
offset_right = 272.0
offset_bottom = 376.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.9, 0.9)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 20

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Invader1Texture" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("2_su4we")

[node name="Invader1Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3uypn")
theme_override_font_sizes/font_size = 30
text = " = 10 POINTS "

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Invader2Texture" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("4_iod57")

[node name="Invader2Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3uypn")
theme_override_font_sizes/font_size = 30
text = " = 20 POINTS"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Invader3Texture" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("2_pcynf")

[node name="Invader3Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3uypn")
theme_override_font_sizes/font_size = 30
text = " = 40 POINTS"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3uypn")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_vcw74")
text = "PLAY SPACE INVADERS "

[node name="CenterContainerLeaderboard" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/CenterContainerLeaderboard"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3uypn")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_vcw74")
text = "Leaderboard "

[node name="CenterContainerSettings" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/CenterContainerSettings"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3uypn")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_vcw74")
text = "Settings "

[node name="CenterContainerHelp" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/CenterContainerHelp"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3uypn")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_vcw74")
text = "Help "

[node name="CenterContainerQuit2" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/CenterContainerQuit2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3uypn")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_vcw74")
text = "Quit "

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Panel" type="Panel" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="Music" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 397.0
offset_top = 177.0
offset_right = 510.0
offset_bottom = 232.0
theme_override_font_sizes/font_size = 40
text = "Music"

[node name="Settings" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 494.0
offset_top = 106.0
offset_right = 650.0
offset_bottom = 137.0
theme_override_fonts/font = ExtResource("2_3uypn")
theme_override_font_sizes/font_size = 30
text = "Settings "

[node name="Sound Effects" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 395.0
offset_top = 252.0
offset_right = 657.0
offset_bottom = 307.0
theme_override_font_sizes/font_size = 40
text = "Sound Effects"

[node name="Music Slider" type="HSlider" parent="Panel"]
custom_minimum_size = Vector2(100, 59)
layout_mode = 0
offset_left = 738.0
offset_top = 183.0
offset_right = 838.0
offset_bottom = 242.0
theme_override_styles/slider = SubResource("StyleBoxFlat_7adil")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_jutwi")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_h0d4f")
max_value = 1.0
step = 0.05
value = 0.75
script = ExtResource("6_idy13")

[node name="Effect Slider" type="HSlider" parent="Panel"]
custom_minimum_size = Vector2(100, 59)
layout_mode = 0
offset_left = 748.0
offset_top = 260.0
offset_right = 848.0
offset_bottom = 319.0
theme = SubResource("Theme_b8rur")
max_value = 1.0
step = 0.05
value = 0.75

[node name="Button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 516.0
offset_top = 495.0
offset_right = 577.0
offset_bottom = 526.0
text = "Return"

[node name="HelpPanel" type="Panel" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="HelpPanel"]
layout_mode = 2
offset_left = 317.0
offset_top = 206.0
offset_right = 367.0
offset_bottom = 356.0

[node name="ColorRect2" type="ColorRect" parent="HelpPanel"]
layout_mode = 2
offset_left = 377.0
offset_top = 206.0
offset_right = 427.0
offset_bottom = 356.0

[node name="ColorRect8" type="ColorRect" parent="HelpPanel"]
layout_mode = 2
offset_left = 437.0
offset_top = 206.0
offset_right = 487.0
offset_bottom = 356.0

[node name="ColorRect9" type="ColorRect" parent="HelpPanel"]
layout_mode = 2
offset_left = 497.0
offset_top = 206.0
offset_right = 547.0
offset_bottom = 356.0

[node name="ColorRect3" type="ColorRect" parent="HelpPanel"]
layout_mode = 2
offset_left = 557.0
offset_top = 206.0
offset_right = 607.0
offset_bottom = 356.0

[node name="ColorRect4" type="ColorRect" parent="HelpPanel"]
layout_mode = 2
offset_left = 617.0
offset_top = 206.0
offset_right = 667.0
offset_bottom = 356.0

[node name="ColorRect5" type="ColorRect" parent="HelpPanel"]
layout_mode = 2
offset_left = 677.0
offset_top = 206.0
offset_right = 727.0
offset_bottom = 356.0

[node name="ColorRect6" type="ColorRect" parent="HelpPanel"]
layout_mode = 2
offset_left = 737.0
offset_top = 206.0
offset_right = 787.0
offset_bottom = 356.0

[node name="ColorRect7" type="ColorRect" parent="HelpPanel"]
layout_mode = 2
offset_left = 797.0
offset_top = 206.0
offset_right = 847.0
offset_bottom = 356.0

[node name="ColorRect10" type="ColorRect" parent="HelpPanel"]
layout_mode = 2
offset_left = 347.0
offset_top = 206.0
offset_right = 387.0
offset_bottom = 306.0
color = Color(0.0110876, 0.0110876, 0.0110876, 1)

[node name="ColorRect11" type="ColorRect" parent="HelpPanel"]
layout_mode = 2
offset_left = 407.0
offset_top = 206.0
offset_right = 447.0
offset_bottom = 306.0
color = Color(0.0110876, 0.0110876, 0.0110876, 1)

[node name="ColorRect12" type="ColorRect" parent="HelpPanel"]
layout_mode = 2
offset_left = 467.0
offset_top = 206.0
offset_right = 507.0
offset_bottom = 306.0
color = Color(0.0110876, 0.0110876, 0.0110876, 1)

[node name="ColorRect13" type="ColorRect" parent="HelpPanel"]
layout_mode = 2
offset_left = 587.0
offset_top = 206.0
offset_right = 627.0
offset_bottom = 306.0
color = Color(0.0110876, 0.0110876, 0.0110876, 1)

[node name="ColorRect14" type="ColorRect" parent="HelpPanel"]
layout_mode = 2
offset_left = 647.0
offset_top = 206.0
offset_right = 687.0
offset_bottom = 306.0
color = Color(0.0110876, 0.0110876, 0.0110876, 1)

[node name="Label2" type="Label" parent="HelpPanel"]
layout_mode = 2
offset_left = 560.0
offset_top = 306.0
offset_right = 598.0
offset_bottom = 334.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Left"

[node name="Label3" type="Label" parent="HelpPanel"]
layout_mode = 2
offset_left = 620.0
offset_top = 306.0
offset_right = 657.0
offset_bottom = 334.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Fire"

[node name="Label4" type="Label" parent="HelpPanel"]
layout_mode = 2
offset_left = 677.0
offset_top = 306.0
offset_right = 728.0
offset_bottom = 334.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Right"

[node name="Button" type="Button" parent="HelpPanel"]
layout_mode = 0
offset_left = 543.0
offset_top = 487.0
offset_right = 604.0
offset_bottom = 518.0
text = "Return"

[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/Button" to="." method="load_game"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainerLeaderboard/Button" to="." method="load_leaderboard"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainerSettings/Button" to="." method="open_settings"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainerHelp/Button" to="." method="open_Help"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainerQuit2/Button" to="." method="quit_game"]
[connection signal="value_changed" from="Panel/Music Slider" to="Panel/Music Slider" method="music_slider_changed"]
[connection signal="value_changed" from="Panel/Effect Slider" to="Panel/Music Slider" method="effect_slider_changed"]
[connection signal="pressed" from="Panel/Button" to="." method="close_settings"]
[connection signal="pressed" from="HelpPanel/Button" to="." method="close_Help"]
